Fix menu on mobile

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -6,6 +6,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 10px 20px 10px 20px;
+  flex-wrap: wrap;
 }
 
 .header img {
@@ -27,6 +28,7 @@
   list-style: none;
   font-size: 20px;
   font-weight: bold;
+  flex-wrap: wrap;
 }
 
 .header > div > ul > li {
